syntax = "proto3";
package anndb_pb;

service Search {
	rpc Search(SearchRequest) returns (stream SearchResultItem);
	rpc SearchPartitions(SearchPartitionsRequest) returns (stream SearchResultItem);
}

message SearchRequest {
	bytes dataset_id = 1;
	repeated float query = 2;
	uint32 k = 3;
}

message SearchPartitionsRequest {
	bytes dataset_id = 1;
	repeated bytes partition_ids = 2;
	repeated float query = 3;
	uint32 k = 4;
}

message SearchResultItem {
	uint64 id = 1;
	map<string,string> metadata = 2;
	float score = 3;
}